--- a/cdap-ui/app/directives/plugin-functions/functions/get-schema/get-schema-modal.html
+++ b/cdap-ui/app/directives/plugin-functions/functions/get-schema/get-schema-modal.html
@@ -14,6 +14,55 @@
   the License.
 -->
 
-<div>
-  <button ng-click="GetSchemaModalController.fetchSchema()">test</button>
+<div class="modal-header clearfix">
+  <h3 class="modal-title">
+    <span>Query:</span>
+    <span class="fa fa-times pull-right" ng-click="$dismiss()"></span>
+  </h3>
+</div>
+
+<div class="modal-body">
+  <div class="row">
+    <div class="col-xs-12">
+      <textarea class="form-control query-input pull-left" ng-model="GetSchemaModalController.query"></textarea>
+
+      <button class="btn btn-default pull-right"
+              ng-click="GetSchemaModalController.fetchSchema()">
+        Execute
+      </button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <table class="table" ng-if="GetSchemaModalController.schema && !GetSchemaModalController.error">
+        <thead>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Null</th>
+        </thead>
+        <tbody>
+          <tr ng-repeat="field in GetSchemaModalController.schema">
+            <td>{{ field.name }}</td>
+            <td>{{ field.type }}</td>
+            <td class="text-center">
+              <input type="checkbox" ng-model="field.nullable" disabled>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <p class="text-danger" ng-if="GetSchemaModalController.error">
+        Error: {{ GetSchemaModalController.error }}
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="modal-footer" ng-if="GetSchemaModalController.schema">
+  <button class="btn btn-blue"
+          ng-disabled="!GetSchemaModalController.schema"
+          ng-click="GetSchemaModalController.apply()">
+    Apply
+  </button>
 </div>
