--- a/cdap-ui/app/index.html
+++ b/cdap-ui/app/index.html
@@ -71,6 +71,7 @@
   <script type="text/javascript" src="/assets/bundle/polyfill.js"></script>
   <script type="text/javascript" src="/assets/bundle/lib.js"></script>
   <script type="text/javascript" src="/config.js"></script>
+  <script type="text/javascript" src="/ui-config.js"></script>
   <script type="text/javascript" src="/assets/bundle/app.js"></script>
   <script type="text/javascript" src="/assets/bundle/tpl.js"></script>
 
